--- a/index.html
+++ b/index.html
@@ -130,22 +130,22 @@
         </h2>
 
         <ul>
-          <li>
+          <li class="corgi-li">
             <img class="corgi-img" src="svgs/corgi-red.svg" alt="Corgi Coat Red">
             <br>
             <span> Red </span>
           </li>
-          <li>
+          <li class="corgi-li">
             <img class="corgi-img" src="svgs/corgi-fawn.svg" alt="Corgi Coat Fawn">
             <br>
             <span> Fawn </span>
           </li>
-          <li>
+          <li class="corgi-li">
             <img class="corgi-img" src="svgs/corgi-sable.svg" alt="Corgi Coat Sable">
             <br>
             <span> Sable </span>
           </li>
-          <li>
+          <li class="corgi-li">
             <img class="corgi-img" src="svgs/corgi-blacktan.svg" alt="Corgi Coat Black and Tan">
             <br>
             <span> Black and Tan </span>
